update release step to use generated tag

--- a/.github/workflows/release-to-central.yaml
+++ b/.github/workflows/release-to-central.yaml
@@ -73,7 +73,7 @@ jobs:
             	<dependency>
             	    <groupId>org.jemberai</groupId>
             	    <artifactId>jember-mvn-parent</artifactId>
-            	    <version>${{ github.event.inputs.releaseversion }}</version>
+            	    <version>${{ steps.bump.outputs.new_tag }}</version>
             	</dependency>
             </dependencies>
             ```
