Updating mvn cfg to auto publish, and wait until verified. Closes #11

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,8 @@
             <extensions>true</extensions>
             <configuration>
               <publishingServerId>oss.sonatype.org</publishingServerId>
+              <autoPublish>true</autoPublish>
+              <waitUntil>validated</waitUntil>
             </configuration>
           </plugin>
         </plugins>
