--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,8 +4,9 @@ concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
 
-on: [pull_request]
-
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
   build_on_pr:
     name: Build On PR
@@ -16,7 +17,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@main
-
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
@@ -25,5 +27,15 @@ jobs:
           architecture: x64
           cache: 'maven'
 
-      - name: Build with Maven
-        run: mvn -B clean verify
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=jemberai_jember-cryptography`
