--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.release>${java.version}</maven.compiler.release>
+    <!--properties for Sonar Cloud-->
+    <sonar.organization>jemberai</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
+    <!--version properties-->
     <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
     <versions-maven-plugin.version>2.17.1</versions-maven-plugin.version>
     <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
