--- a/jember-spring-bom/pom.xml
+++ b/jember-spring-bom/pom.xml
@@ -320,6 +320,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot.version}</version>
                     <executions>
                         <execution>
                             <id>repackage</id>
@@ -411,6 +412,7 @@
                         <plugin>
                             <groupId>org.springframework.boot</groupId>
                             <artifactId>spring-boot-maven-plugin</artifactId>
+                            <version>${spring-boot.version}</version>
                             <configuration>
                                 <image>
                                     <builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
@@ -462,6 +464,7 @@
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-maven-plugin</artifactId>
+                        <version>${spring-boot.version}</version>
                         <executions>
                             <execution>
                                 <id>process-test-aot</id>
