--- a/jember-spring-bom/pom.xml
+++ b/jember-spring-bom/pom.xml
@@ -162,6 +162,11 @@
                 <version>${dev.langchain4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>dev.langchain4j</groupId>
+                <artifactId>langchain4j-anthropic</artifactId>
+                <version>${dev.langchain4j.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.awaitility</groupId>
                 <artifactId>awaitility</artifactId>
                 <version>${awaitility.version}</version>
