--- a/jember-spring-bom/pom.xml
+++ b/jember-spring-bom/pom.xml
@@ -167,6 +167,11 @@
                 <version>${dev.langchain4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>io.github.cdimascio</groupId>
+                <artifactId>dotenv-java</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.awaitility</groupId>
                 <artifactId>awaitility</artifactId>
                 <version>${awaitility.version}</version>
